--- a/GScriptBase/GScript.Standard.csproj
+++ b/GScriptBase/GScript.Standard.csproj
@@ -16,6 +16,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="std\string.gs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="test.gs">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
