--- a/GScriptBase/Properties/launchSettings.json
+++ b/GScriptBase/Properties/launchSettings.json
@@ -2,24 +2,7 @@
   "profiles": {
     "GScriptBase": {
       "commandName": "Project",
-      "commandLineArgs": "r D:\\Files\\GScriptAnalyzer\\GScriptBase\\std\\114514.gs"
+      "commandLineArgs": "r D:\\Files\\GScriptAnalyzer\\GScriptBase\\test.gs"
     }
   }
-}
-
-
-{
-  "bpm": {
-    {
-      "time": [ 0, 0, 1 ],
-      "bpm" : 132.0
-    }
-  },
-  "videos": [
-    {
-      "path": "bga.mp4",
-      "time": [ 0, 0, 1 ],
-      ...
-    }
-  ]
 }
