upd & add & ren: Rename Analyzer project an re-optimize framework

--- a/GScript.Analyzer/GScript.Analyzer.csproj
+++ b/GScript.Analyzer/GScript.Analyzer.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="C:\Users\Administrator.DESKTOP-38EEGUF\source\repos\EUtility\EUtility.ValueEx\EUtility.ValueEx.csproj" />
+    <PackageReference Include="Elipese.EUtility.ValueEx" Version="1.0.1" />
   </ItemGroup>
 
 </Project>
